--- a/style.css
+++ b/style.css
@@ -356,44 +356,43 @@ footer {
 
 }
 
+/* 
 @media (min-width: 1024px) {
 
-    /*     .proyectos {
+       .proyectos {
         width: 100%;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
     }
- */
-    /*     .proyecto {
+ 
+         .proyecto {
         display: flex;
         flex-wrap: wrap;
         width: 18%;
-    } */
+    } 
 
-    /*     .flex {
+        .flex {
         padding: 1rem;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-    } */
+    }
 
-    /*   .img_proyecto {
+      .img_proyecto {
         width: 100px;
         align-items: center;
     }
- */
-    /*    .title_proyecto {
-        flex-wrap: wrap;
-    } */
 
-    /*  .pproyecto {
+       .title_proyecto {
+        flex-wrap: wrap;
+    }
+
+      .pproyecto {
         width: 90%;
         text-align: justify;
          font-size: 10px
     }
- */
-
 
     footer {
         flex-direction: column-reverse;
@@ -418,4 +417,4 @@ footer {
         max-width: 400px;
         order: 3;
     }
-}
+} */
