--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h2:after {
 
 .img_servicio {
     display: flex;
-    width: 50%;
+    width: 80%;
     margin: 0 auto;
     /* border-radius: 50%; */
     padding: 0.5rem;
@@ -314,6 +314,14 @@ footer {
         max-width: 400px;
         min-height: 500px;
         justify-content: space-evenly;
+    }
+
+    .img_servicio {
+        display: flex;
+        width: 100%;
+        margin: 0 auto;
+        /* border-radius: 50%; */
+        padding: 0.5rem;
     }
 
     .proyectos {
